# Nexus

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  docker-compose.yml
.github/workflows/: ci.yml
apps/agent/: README.md  pyproject.toml
apps/agent/src/nexus_agent/: cli.py  config.py  handoff.py  runner.py  state.py
apps/agent/src/nexus_agent/adapters/: claude_code.py
apps/agent/tests/: test_claude_code.py  test_config.py  test_handoff.py  test_runner.py
apps/agent/tests/fixtures/: session.jsonl
apps/api/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml
apps/api/migrations/: env.py
apps/api/migrations/versions/: 01b4f8c7bff0_handoff_log_table.py  40bb0fcad8c1_device_token_table_and_message_external_.py  bae39a06bae0_job_run_table_conversation_summarized_.py  ca0f4e17cc20_provider_key_spend_precision_and_spend_.py  f1992296b15f_initial_schema.py  f926188861d1_assistant_layer_suggestion_review_.py
apps/api/src/nexus_api/: auth.py  config.py  crypto.py  logging.py  main.py  worker.py
apps/api/src/nexus_api/context/: embeddings.py  llm.py  retrieval.py  search.py
apps/api/src/nexus_api/db/: base.py  models.py  session.py
apps/api/src/nexus_api/gateway/: __init__.py  budget.py  pricing.py  providers.py  service.py  sse.py  types.py
apps/api/src/nexus_api/gateway/adapters/: anthropic.py  gemini.py  openai_compat.py
apps/api/src/nexus_api/jobs/: assistant.py  framework.py  pipeline.py
apps/api/src/nexus_api/routers/: chat.py  conversations.py  devices.py  goals.py  handoff.py  ingest.py  mcp.py  providers.py  search.py  sources.py  tasks.py  today.py
apps/api/src/nexus_api/services/: handoff.py  importers.py  ingest.py
apps/api/tests/: conftest.py  test_assistant_jobs.py  test_auth.py  test_chat_api.py  test_context_engine.py  test_crypto.py  test_gateway_adapters.py  test_gateway_budget.py  test_handoff_mcp.py  test_healthz.py  test_importers.py  test_ingest_api.py  test_migrations.py  test_providers_api.py  test_tasks_api.py
apps/api/tests/fixtures/: chatgpt-export.json  claude-export.json
apps/extension/: README.md  background.js  manifest.json  options.html  options.js
apps/web/: Dockerfile  (+5 more)
docs/: IMPLEMENTATION_PLAN.md  MCP.md  OPERATIONS.md  SECURITY.md  SPEC.md
(+22 files in other folders)
