[project]
name = "nexus-agent"
version = "1.0.0"
description = "Nexus companion agent — read-only local-log watcher (Tier A)."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.scripts]
nexus-agent = "nexus_agent.cli:main"

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "jsonschema>=4.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_agent"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "SIM"]

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["nexus_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
