[project]
name = "nexus-api"
version = "0.1.0"
description = "Nexus backend — ingest, context engine, provider gateway, assistant, handoff, MCP."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "structlog>=24.1",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "cryptography>=42.0",
    "httpx>=0.27",
    # Multipart form parsing for POST /import file uploads.
    "python-multipart>=0.0.9",
    # Canonical ingest contract; installed from packages/schema/python
    # (editable in dev/CI, copied into the Docker image).
    "nexus-schema",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nexus_api"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # bugbear
    "UP",  # pyupgrade
    "SIM", # simplify
]

[tool.mypy]
strict = true
mypy_path = "src"
packages = ["nexus_api"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"
